update linker script to put bin in ccm

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -12,7 +12,19 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-#
+
+###################################################################################################
+###################################################################################################
+###################################################################################################
+###################################################################################################
+###################################################################################################
+###########if the config will be modify in future,dont forget to edit this file!!!!!!##############
+###################################################################################################
+###################################################################################################
+###################################################################################################
+###################################################################################################
+###################################################################################################
+
 CONF_PARAMS = -set iccm_enable
 # Check for RV_ROOT
 ifeq (,$(wildcard ${RV_ROOT}/configs/swerv.config))
@@ -58,9 +70,11 @@ endif
 
 # provide specific link file
 ifeq (,$(wildcard $(TEST_DIR)/$(TEST).ld))
-	LINK = $(TBDIR)/link.ld
+#	LINK = $(TBDIR)/link.ld
+	LINK = $(BUILD_DIR)/link.ld
 else
-	LINK = $(TEST_DIR)/$(TEST).ld
+#	LINK = $(TEST_DIR)/$(TEST).ld
+	LINK = $(BUILD_DIR)/link.ld
 endif
 
 OFILES = $(TEST).o
