--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ unit_level_testbench/pic/workspace/simulation/sim
 tools/codegenerators/AAPGV2/swerv/asm/out*
 tools/codegenerators/AAPGV2/swerv/bin/out*
 tools/codegenerators/AAPGV2/swerv/objdump/out*
+signal.rc
